--- a/Regressão - introdução/Gabaritos/Notebook_03 - Regressão Linear para prever o consumo de energia.ipynb
+++ b/Regressão - introdução/Gabaritos/Notebook_03 - Regressão Linear para prever o consumo de energia.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "46Wgvcemg2zt"
+      },
       "source": [
         "#**Notebook 03**\n",
         "- **Professor:** Iális Cavalcante\n",
@@ -26,39 +15,36 @@
         "No notebook 03 vamos avançar um pouco mais sobre os conceitos de regressão linear e entenderemos um pouco sobre outros algoritmos.\n",
         "- **Questão:** A engenheira de computação, Amanda, esta trabalhando em uma empresa de aço e precisa analisar e realizar previsões sobre o uso da energia na fábrica em que ela trabalha. Utilize seus conhecimentos em regressão e realize previsões sobre o consumo de energia em kWh, selecionando o melhor conjunto de amostras para tal.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "46Wgvcemg2zt"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Instalação de bibliotecas"
-      ],
       "metadata": {
         "id": "YRh-JyH3z_cq"
-      }
+      },
+      "source": [
+        "##Instalação de bibliotecas"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install plotly --upgrade"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SJ8QNRmJ0CYh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install plotly --upgrade"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Importações de bibliotecas"
-      ],
       "metadata": {
         "id": "NOSU58lWh-ZL"
-      }
+      },
+      "source": [
+        "##Importações de bibliotecas"
+      ]
     },
     {
       "cell_type": "code",
@@ -84,341 +70,342 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Leitura de dados"
-      ],
       "metadata": {
         "id": "G3fUxNosiBJh"
-      }
+      },
+      "source": [
+        "##Leitura de dados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "steel = pd.read_csv('Steel_industry.csv')\n",
-        "steel"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "iSP91hQ4iD9q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "steel = pd.read_csv('Steel_industry.csv')\n",
+        "steel"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Funções extras"
-      ],
       "metadata": {
         "id": "JEOcnex_iGgf"
-      }
+      },
+      "source": [
+        "##Funções extras"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "IeaX1tjr3AMh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Análise de dados"
-      ],
       "metadata": {
         "id": "aOXqXJqkiENs"
-      }
+      },
+      "source": [
+        "##Análise de dados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Crie um código para exibir o shape da base de dados disponibilizada\n",
-        "steel.shape"
-      ],
+      "execution_count": 4,
       "metadata": {
-        "id": "chLAAl8fiGNg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "chLAAl8fiGNg",
         "outputId": "37a87606-7e1d-46a1-f459-63735fbb2998"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(35041, 11)"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "steel.shape"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "steel.dtypes"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "t6ULtq_iNmfa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "steel.dtypes"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Verifique a existência de valores nulos\n",
-        "print(steel.isnull().sum())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zFaT_m0SYXWF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(steel.isnull().sum())"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "steel.describe()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XOGgjCwqYuVR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "steel.describe()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Aplicando gráfico de boxplot ao campo 'Age' do dataset\n",
-        "plt.boxplot(steel['Usage_kWh'])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "P0mDsPtOOSBs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Aplicando gráfico de boxplot ao campo 'Usage_kWh' do dataset\n",
+        "plt.boxplot(steel['Usage_kWh'])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Analisando a correlação dos dados\n",
-        "steel.corr()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "d-G5fg-cZ5k9"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Analisando a correlação dos dados\n",
+        "steel.corr()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QbDvdAQiDrmB"
+      },
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(20,10))\n",
         "plt.plot(steel['Usage_kWh'])\n",
         "plt.tick_params(axis='x', labelrotation=45)\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "QbDvdAQiDrmB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Algoritmo de Machine Learning"
-      ],
       "metadata": {
         "id": "Vb_YTl3niM5p"
-      }
+      },
+      "source": [
+        "##Algoritmo de Machine Learning"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Divisão de dados de treino e teste"
-      ],
       "metadata": {
         "id": "WisjkmPlicex"
-      }
+      },
+      "source": [
+        "###Divisão de dados de treino e teste"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Utilizando dados de 'Acidity', 'Weight', 'Sweetness', 'Crunchiness' e 'Juiciness' para prever os dados de 'Size'\n",
-        "X_train, X_test, y_train, y_test = train_test_split(steel[['Lagging_Current_Reactive.Power_kVarh', 'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)', 'Lagging_Current_Power_Factor', 'Leading_Current_Power_Factor']], steel['Usage_kWh'], test_size = 0.3, random_state = 0)"
-      ],
+      "execution_count": 11,
       "metadata": {
         "id": "W27ARJhjigh9"
       },
-      "execution_count": 11,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Utilizando dados de 'Lagging_Current_Reactive.Power_kVarh', 'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)', 'Lagging_Current_Power_Factor' e 'Leading_Current_Power_Factor' para prever os dados de 'Usage_kWh'\n",
+        "X_train, X_test, y_train, y_test = train_test_split(steel[['Lagging_Current_Reactive.Power_kVarh', 'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)', 'Lagging_Current_Power_Factor', 'Leading_Current_Power_Factor']], steel['Usage_kWh'], test_size = 0.3, random_state = 0)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4Ie4jkHOcfeE"
+      },
+      "outputs": [],
       "source": [
         "print('Shape dos dados de treino: {}'.format(X_train.shape))\n",
         "print('Shape das classes de treino: {}'.format(y_train.shape, '\\n'))\n",
         "print('Shape dos dados de teste: {}'.format(X_test.shape))\n",
         "print('Shape das classes de teste: {}'.format(y_test.shape))"
-      ],
-      "metadata": {
-        "id": "4Ie4jkHOcfeE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Algoritmo de Regressão Linear"
-      ],
       "metadata": {
         "id": "8aoBpPNUigxw"
-      }
+      },
+      "source": [
+        "###Algoritmo de Regressão Linear"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Crie um algortimo de Regressão Linear\n",
-        "regressor_linear = LinearRegression()"
-      ],
+      "execution_count": 13,
       "metadata": {
         "id": "BrLq0bN1imUX"
       },
-      "execution_count": 13,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Crie um algortimo de Regressão Linear\n",
+        "regressor_linear = LinearRegression()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Treinamento do modelo"
-      ],
       "metadata": {
         "id": "U6R3u6IIimw0"
-      }
+      },
+      "source": [
+        "###Treinamento do modelo"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Treine o modelo com a função fit\n",
-        "regressor_linear.fit(X_train, y_train)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9_delDq4ipO6"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Treine o modelo com a função fit\n",
+        "regressor_linear.fit(X_train, y_train)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "regressor_linear.score(X_test, y_test)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cOr08QA7dN5F"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "regressor_linear.score(X_test, y_test)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qFmFCRegdZMs"
+      },
+      "outputs": [],
       "source": [
         "#Realize previsões com a função predict\n",
         "previsoes = regressor_linear.predict(X_test)\n",
         "previsoes"
-      ],
-      "metadata": {
-        "id": "qFmFCRegdZMs"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Visualização dos resultados"
-      ],
       "metadata": {
         "id": "diK5jeUciSio"
-      }
+      },
+      "source": [
+        "##Visualização dos resultados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Calculando ponto de interceptação\n",
-        "regressor_linear.intercept_"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zwoZ2IQ-kRs3"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Calculando ponto de interceptação\n",
+        "regressor_linear.intercept_"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Calculando valores de coenficiente\n",
-        "regressor_linear.coef_"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "QN-LJKPikYy_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Calculando valores de coenficiente\n",
+        "regressor_linear.coef_"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "b-QB48ZeiVRg"
+      },
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(20,10))\n",
         "plt.plot(np.linspace(-1, 1, len(y_test)), previsoes, label='Previsões', color='black', linewidth=1.5)\n",
         "plt.plot(np.linspace(-1, 1, len(y_test)), y_test, label='Saída Original', color='red', linewidth=1.5)\n",
         "plt.legend(loc=\"lower right\")\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "b-QB48ZeiVRg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nurePbblfgJS"
+      },
+      "outputs": [],
       "source": [
         "plt.figure(figsize=(10,5))\n",
         "plt.plot(np.linspace(-1, 1, 10), previsoes[0:10], label='Previsões', color='black', linewidth=1.5)\n",
         "plt.plot(np.linspace(-1, 1, 10), y_test[0:10], label='Saída Original', color='red', linewidth=1.5)\n",
         "plt.legend(loc=\"lower right\")\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "nurePbblfgJS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-VKguJuIf-X9"
+      },
+      "outputs": [],
       "source": [
         "#Calculando métricas de avaliação para modelos de regressão\n",
         "print(\" Erro máx. {}.\\n Erro médio absoluto: {}.\\n Erro quadrático absoluto: {}.\\n Raiz do erro quadrático médio: {}. \"\n",
         "      .format(max_error(previsoes, y_test),mean_absolute_error(previsoes, y_test),\n",
         "      mean_squared_error(previsoes, y_test),mean_squared_error(previsoes, y_test)\n",
         "      ))"
-      ],
-      "metadata": {
-        "id": "-VKguJuIf-X9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Nx0py0djiU5x"
+      },
       "source": [
         "##Referências\n",
         "- [Dataset Steel](https://www.kaggle.com/datasets/nimapourmoradi/steel-dataset/data)\n",
@@ -427,10 +414,21 @@
         "- [Entendendo correlação](https://www.significados.com.br/correlacao/)\n",
         "- [Regressão Linear](https://scikit-learn.org/stable/modules/linear_model.html)\n",
         "- [Métricas de avaliação](https://scikit-learn.org/stable/modules/model_evaluation.html#model-evaluation)"
-      ],
-      "metadata": {
-        "id": "Nx0py0djiU5x"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
