--- a/Regressão Múltipla e Polinomial/Notebook_05 - Classificador de SPAM com regressão logística.ipynb
+++ b/Regressão Múltipla e Polinomial/Notebook_05 - Classificador de SPAM com regressão logística.ipynb
@@ -1,22 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "46Wgvcemg2zt"
+      },
       "source": [
         "#**Notebook 05**\n",
         "- **Professor:** Iális Cavalcante\n",
@@ -27,39 +15,36 @@
         "No notebook 05 vamos avançar um pouco mais sobre os conceitos de regressão logística.\n",
         "- **Questão:** Os alunos da Universidade Federal do Ceará recebem diversos spam's durante o semestre. Isso dificulta a comnicação de professores e alunos. Sabendo disso, o professor Iális decidiu desenvolver um classificador binário utilizando o algoritmo de regresão logística. Para isso, um dataset com amostras de spam e suas classes são disponibilizadas.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "46Wgvcemg2zt"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Instalação de bibliotecas"
-      ],
       "metadata": {
         "id": "YRh-JyH3z_cq"
-      }
+      },
+      "source": [
+        "##Instalação de bibliotecas"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install plotly --upgrade"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SJ8QNRmJ0CYh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install plotly --upgrade"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Importações de bibliotecas"
-      ],
       "metadata": {
         "id": "NOSU58lWh-ZL"
-      }
+      },
+      "source": [
+        "##Importações de bibliotecas"
+      ]
     },
     {
       "cell_type": "code",
@@ -91,354 +76,371 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Leitura de dados"
-      ],
       "metadata": {
         "id": "G3fUxNosiBJh"
-      }
+      },
+      "source": [
+        "##Leitura de dados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "atributos = ['classe', 'mensagem']\n",
-        "df_sms = pd.read_csv('SMSSpamCollection', delimiter='\\t', header=None, names=atributos)\n",
-        "df_sms"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "iSP91hQ4iD9q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Leia a base de dados SMSSpamCollection e selecione os atributos\n",
+        "atributos = ['', '']\n",
+        "df_sms = pd.read_csv('', delimiter='\\t', header=None, names=atributos)\n",
+        "df_sms"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Funções extras"
-      ],
       "metadata": {
         "id": "JEOcnex_iGgf"
-      }
+      },
+      "source": [
+        "##Funções extras"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "IeaX1tjr3AMh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Análise de dados"
-      ],
       "metadata": {
         "id": "aOXqXJqkiENs"
-      }
+      },
+      "source": [
+        "##Análise de dados"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "chLAAl8fiGNg"
+      },
+      "outputs": [],
       "source": [
         "sms = df_sms['mensagem'].values\n",
         "classe = df_sms['classe'].values\n",
         "print(sms)"
-      ],
-      "metadata": {
-        "id": "chLAAl8fiGNg"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(classe)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "t6ULtq_iNmfa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(classe)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Convertendo os textos para representações numéricas"
-      ],
       "metadata": {
         "id": "Jh-Vz8518J5_"
-      }
+      },
+      "source": [
+        "##Convertendo os textos para representações numéricas"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "zFaT_m0SYXWF"
+      },
+      "outputs": [],
       "source": [
         "tfidf = TfidfVectorizer(token_pattern=u'[a-zA-Z]{3,}')\n",
         "tfidf.fit(sms)\n",
         "sms_vector = tfidf.transform(sms)"
-      ],
-      "metadata": {
-        "id": "zFaT_m0SYXWF"
-      },
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for key in sorted(tfidf.vocabulary_.keys())[:100]:\n",
-        "    print(\"{}: {}\".format(key, tfidf.vocabulary_[key]))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XOGgjCwqYuVR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "for key in sorted(tfidf.vocabulary_.keys())[:100]:\n",
+        "    print(\"{}: {}\".format(key, tfidf.vocabulary_[key]))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print('SMS original: {}'.format(sms[0]))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "P0mDsPtOOSBs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print('SMS original: {}'.format(sms[0]))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print('SMS tfidf value: {}'.format(sms_vector[0]))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "d-G5fg-cZ5k9"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print('SMS tfidf value: {}'.format(sms_vector[0]))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print('SMS vector: {}'.format(tfidf.inverse_transform(sms_vector[0])))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "QbDvdAQiDrmB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print('SMS vector: {}'.format(tfidf.inverse_transform(sms_vector[0])))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "id": "O9M5pL6K8dQX"
+      },
+      "outputs": [],
       "source": [
         "le = preprocessing.LabelEncoder()\n",
         "le.fit(classe)\n",
         "classe_encoder = le.transform(classe)"
-      ],
-      "metadata": {
-        "id": "O9M5pL6K8dQX"
-      },
-      "execution_count": 16,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(classe_encoder)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "N-E1vUQW8gdh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(classe_encoder)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(le.classes_)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "1uXInHWj8iHF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(le.classes_)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Algoritmo de Machine Learning"
-      ],
       "metadata": {
         "id": "Vb_YTl3niM5p"
-      }
+      },
+      "source": [
+        "##Algoritmo de Machine Learning"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Divisão de dados de treino e teste"
-      ],
       "metadata": {
         "id": "WisjkmPlicex"
-      }
+      },
+      "source": [
+        "###Divisão de dados de treino e teste"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(sms_vector, classe_encoder, test_size = 0.3, random_state = 0)"
-      ],
+      "execution_count": 19,
       "metadata": {
         "id": "W27ARJhjigh9"
       },
-      "execution_count": 19,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(sms_vector, classe_encoder, test_size = 0.3, random_state = 0)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4Ie4jkHOcfeE"
+      },
+      "outputs": [],
       "source": [
         "print('Shape dos dados de treino: {}'.format(X_train.shape))\n",
         "print('Shape das classes de treino: {}'.format(y_train.shape, '\\n'))\n",
         "print('Shape dos dados de teste: {}'.format(X_test.shape))\n",
         "print('Shape das classes de teste: {}'.format(y_test.shape))"
-      ],
-      "metadata": {
-        "id": "4Ie4jkHOcfeE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Algoritmo de Regressão Logística"
-      ],
       "metadata": {
         "id": "8aoBpPNUigxw"
-      }
+      },
+      "source": [
+        "###Algoritmo de Regressão Logística"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Crie um algortimo de Regressão Logística\n",
-        "regressor_log = LogisticRegression()"
-      ],
+      "execution_count": 25,
       "metadata": {
         "id": "BrLq0bN1imUX"
       },
-      "execution_count": 25,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Crie um algortimo de Regressão Logística\n",
+        "regressor_log = _"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Treinamento do modelo"
-      ],
       "metadata": {
         "id": "U6R3u6IIimw0"
-      }
+      },
+      "source": [
+        "###Treinamento do modelo"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Treine o modelo com a função fit\n",
-        "regressor_log.fit(X_train, y_train)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9_delDq4ipO6"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "regressor_log.fit(X_train, y_train)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "regressor_log.score(X_test, y_test)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cOr08QA7dN5F"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "regressor_log.score(X_test, y_test)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Realize previsões com a função predict\n",
-        "previsoes = regressor_log.predict(X_test)\n",
-        "previsoes"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qFmFCRegdZMs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Realize previsões com a função predict\n",
+        "previsoes = regressor_log._\n",
+        "previsoes"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "scores_dt = cross_val_score(regressor_log, X_test, y_test, scoring='accuracy', cv=5)\n",
-        "print(scores_dt.mean())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DsK5voDm9Pmg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Utilize a função cross_val_score com cv = 5 para realizar o treinamento com validação cruzada neste conjunto de dados\n",
+        "scores_dt = _\n",
+        "print(scores_dt.mean())"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Visualização dos resultados"
-      ],
       "metadata": {
         "id": "diK5jeUciSio"
-      }
+      },
+      "source": [
+        "##Visualização dos resultados"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "matrix = confusion_matrix(y_test, previsoes)\n",
-        "print(matrix)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "JaJfIalG9dzT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Plote a matriz de confusão\n",
+        "matrix = confusion_matrix(_, _)\n",
+        "print(matrix)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "disp = ConfusionMatrixDisplay(confusion_matrix=matrix, display_labels=le.classes_)\n",
-        "disp.plot();"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "QgT5BlHm9juG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "disp = ConfusionMatrixDisplay(confusion_matrix=matrix, display_labels=le.classes_)\n",
+        "disp.plot();"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mnEU8gwT4p_i"
+      },
       "source": [
         "##Atividades de casa\n",
         "- Analise o desempenho de outros algoritmos para o mesmo problema."
-      ],
-      "metadata": {
-        "id": "mnEU8gwT4p_i"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Nx0py0djiU5x"
+      },
       "source": [
         "##Referências\n",
         "- [Regressão Logística com SKLearn](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)\n",
         "- [Regressão Logística](https://www.sakurai.dev.br/regressao-logistica/)\n",
         "- [Matriz de confusão](https://www.ibm.com/docs/pt-br/db2/10.5?topic=visualizer-confusion-matrix-view)"
-      ],
-      "metadata": {
-        "id": "Nx0py0djiU5x"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
